# wasm-explore

./: .gitignore  .gitmodules  README.md
dynamic-linking/: README.md  makefile
dynamic-linking/app/: main.cpp
dynamic-linking/counter/include/: counter.hpp
dynamic-linking/greeter/src/: greeter.cpp
emscripten-into-wasmer/: README.md  b.cpp  makefile
joining-wasm-components/: README.md  makefile
joining-wasm-components/adaptors/: wasi_snapshot_preview1.command.wasm
joining-wasm-components/app/: Cargo.toml
joining-wasm-components/app/src/: bindings.rs  main.rs
joining-wasm-components/app/wit/: world.wit
joining-wasm-components/command/: Cargo.toml
joining-wasm-components/library1/: Cargo.toml
joining-wasm-components/library1/src/: bindings.rs  lib.rs
joining-wasm-components/library1/wit/: world.wit
joining-wasm-components/library2/generator/: __init__.py
joining-wasm-components/library2/generatorworld/: __init__.py
joining-wasm-components/library2/generatorworld/exports/: __init__.py  generator.py
joining-wasm-components/library2/src/: main.py
joining-wasm-components/library2/wit/: python.wit
joining-wasm-components/library3/src/: main.js
joining-wasm-components/library3/wit/: world.wit
linking-wasm/: README.md  makefile
opaque-rainbow/: README.md  makefile
opaque-rainbow/entrypoint/: entrypoint.cpp
opaque-rainbow/rust/: Cargo.toml
opaque-rainbow/rust/src/: bindings.rs
overlapping-symbols-wasm/: README.md  a.cpp  a.hpp  app.cpp  b.cpp  b.hpp  makefile
rainbow/: README.md  makefile
rainbow-wasm/: README.md  makefile
rainbow-wasm/assets/: source.cpp
rainbow-wasm/http_utilities/: http_utilities.cpp  http_utilities.hpp
rainbow-wasm/scene_utilities/: scene_utilities.cpp  scene_utilities.hpp
rainbow/scene_utilities/: scene_utilities.cpp
run-time-dynamic-linking/: README.md  makefile
run-time-dynamic-linking/adder/include/: adder.hpp
run-time-dynamic-linking/adder/src/: adder.cpp
run-time-dynamic-linking/app/: main.cpp
run-time-dynamic-linking/multiplier/include/: multiplier.hpp
run-time-dynamic-linking/multiplier/src/: multiplier.cpp
static-linking/: README.md  makefile
static-linking/app/: lib.hpp  main.cpp
static-linking/counter/src/: counter.cpp
static-linking/greeter/include/: greeter.hpp
wasm-components/: README.md  makefile
wasm-components/adaptors/: wasi_snapshot_preview1.proxy.wasm  wasi_snapshot_preview1.reactor.wasm
wasm-components/bycargocommand/: Cargo.toml
wasm-components/bycargocommand/src/: bindings.rs
wasm-components/bycargoreactor/: Cargo.toml
wasm-components/bycargoreactor/src/: bindings.rs
wasm-components/bycargoreactor/wit/: world.wit
wasm-components/bycargoserver/: Cargo.toml
wasm-components/bycargoserver/src/: bindings.rs  lib.rs
wasm-components/bycargoserver/wit/: world.wit
wasm-components/reactor/: Cargo.toml  reactor.rs
wasm-filesystem/: README.md  makefile
wasm-filesystem/app/src/: main.rs
wasm-network/: .gitignore  README.md  makefile
wasm-network/app/: Cargo.toml
wasm-network/app/src/: bindings.rs  lib.rs  main.rs
wasm-network/app/wit/: world.wit
wasm-network/app2/: Cargo.toml
wasm-network/app2/src/: bindings.rs
wasm-network/app2/wit/: world.wit
wasm-network/hostbindings/: __init__.py  intrinsics.py  root.core0.wasm  root.core1.wasm  root.core2.wasm
wasm-network/hostbindings/imports/: __init__.py  network_provider.py
wasm-network/hostpy/: host.py  self_contained_host_example.py
wasm-network/hostrs/: Cargo.toml  command_export_wasi_imports.wasm  hello_world_export.wasm  hello_world_export_wasi_and_myimport_imports.wasm  hello_world_export_wasi_imports.wasm  makefile
wasm-network/hostrs/app2/: Cargo.toml
wasm-network/hostrs/app2/src/: bindings.rs  lib.rs
wasm-network/hostrs/app2/wit/: world.wit
wasm-network/hostrs/src/: main.rs
wasm-network/hostrs/src_using_app2/: main.rs
wasm-network/pyapp/: src.py
wasm-network/pyapp/wit/: world.wit
