[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:app"

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"component:library1" = { path = "../library1/wit" }
"component:library2" = { path = "../library2/wit" }
"component:library3" = { path = "../library3/wit" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
