[package]
name = "bycargoserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:bycargoserver"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit/world.wit"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:sockets" = { path = "wit/deps/sockets" }
