[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:app"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
