[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:app"

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"component:host" = { path = "../wit/deps/my-host" }
"wasi:cli" = { path = "../wit/deps/cli" }
"wasi:clocks" = { path = "../wit/deps/clocks" }
"wasi:filesystem" = { path = "../wit/deps/filesystem" }
"wasi:http" = { path = "../wit/deps/http" }
"wasi:io" = { path = "../wit/deps/io" }
"wasi:random" = { path = "../wit/deps/random" }
"wasi:sockets" = { path = "../wit/deps/sockets" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
