[package]
name = "hostrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "using_app2"
path = "src_using_app2/main.rs"

[[bin]]
name = "self_contained"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
wasmtime = { version = "17.0.1", features = ["component-model", "async"] }
wasmtime-wasi = { version = "17.0.1" }
